he is the person in charge of the merges. To identify the developer responsible
for a given patch, see the "new patches" section of each log.

____________________________________________________________________
** CHANGES ALONG ref@bsc--2007/siesta-bsc--master--2.1
--------------------------------------------------------------------

2007-02-08 11:05 GMT	Alberto Garcia <albertog@icmab.es>	patch-3

Summary: New geometry module

A new module siesta_geom has been created to hold basic geometry
information.

Thus the atomic coordinates no longer live in 'atomlists', and the unit
cell no longer lives in 'm_cell'. Supercell variables have also be put
in the new module.

+ Some more slimming down of 'siesta_todo'.

2007-02-08 10:40 GMT	Alberto Garcia <albertog@icmab.es>	patch-2

Summary: Creation of a module to hold the siesta options
Keywords: 

A new module 'siesta_options' has been created to hold the program
options (typically those variables that can be specified in the fdf file).
The catch-all module 'siesta_todo' has been slimmed down accordingly.

Routine redata has been put in the module, renamed as 'read_options'.

A few other option-setting statements in the old siesta.F have been put
into read_options. 

Some others remain scattered:

1. Those in the Broyden routines.
2. Those needed to process the initial geometry, read in struct_init.

(Work done at the BSC on Feb 7)

2007-02-08 9:38 GMT	Alberto Garcia <albertog@icmab.es>	patch-1

Summary: Use of xalast in analysis routines. Exit of geometry loop
Keywords: 

The conditions for the setting and use of xalast have been clarified.

The analysis routines (KSVpol, optical, dhscf (in plotting mode),
local_DOS) now use the xalast array, which always refers to the atomic
positions for which the density matrix was computed at the last
geometry iteration performed (i.e., it is set before moving the atoms).

For consistency, new arrays ucell_last and scell_last are similarly handled.
