@@ -7,6 +7,7 @@
       subroutine compute_dm( iscf )
       USE SIESTA_TODO
       USE siesta_options
+      use sparse_matrices
       implicit none
 
       integer :: iscf
