@@ -6,6 +6,7 @@
 
       subroutine new_dm()
       USE SIESTA_TODO
+      use sparse_matrices
       USE siesta_options
       implicit none
 
