@@ -8,6 +8,7 @@
       USE SIESTA_TODO
       USE m_setup_hamiltonian, only: setup_hamiltonian
       USE siesta_options
+      use sparse_matrices
       implicit none
 
       logical :: first, last
