@@ -9,6 +9,7 @@
       USE Kpoint_grid, only: setup_Kpoint_grid
       USE m_new_dm, only: new_dm
       USE siesta_options
+      use sparse_matrices
       implicit none
 
       integer :: istep
